--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "vite start",
+    "start": "serve dist -s -n -p 3000",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -15,7 +15,7 @@
     "@emotion/styled": "11.11.0",
     "@mui/icons-material": "5.14.8",
     "@mui/material": "5.14.8",
-    "axios": "1.5.0",
+    "axios": "^1.6.2",
     "bootstrap": "5.3.2",
     "feather-icons": "4.29.1",
     "js-cookie": "^3.0.5",
@@ -31,6 +31,7 @@
     "react-select": "5.7.7",
     "react-toastify": "^9.1.3",
     "recharts": "^2.10.3",
+    "serve": "^14.2.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -44,6 +45,6 @@
     "eslint-plugin-react-refresh": "0.4.3",
     "postcss": "^8.4.31",
     "tailwindcss": "3.3.3",
-    "vite": "4.4.5"
+    "vite": "^4.5.1"
   }
 }
